# QLocate

./: BaseForm.cpp  BaseForm.h  CMakeLists.txt  ConfigForm.cpp  ConfigForm.h  QLocate.kdev4  builddbcommand.cpp  builddbcommand.h  enviro.cpp  enviro.h  filestat.cpp  filestat.h  getdatacommand.cpp  getdatacommand.h  iconsdata.h  main.cpp  qlicon.h  qlocate.16.xpm.bz2  qlocate.32.xpm.bz2  qlocate.48.xpm.bz2  qlocate.fr.qm  qlocate.fr.ts  qlocate.kdev4  rpmstat.cpp  rpmstat.h  themenu.cpp  themenu.h  utils.cpp  utils.h
docs/en/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.html  index.sgml
ui/: BaseForm.ui  ConfigForm.ui
